# exoscraper

./: .flake8  .gitignore  404.html  CHANGES.md  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: black.yml  flake8.yml  test.yml
docs/: planet.md  star.md  system.md
sandbox/: Untitled.ipynb  Untitled1.ipynb  Untitled2.ipynb
sandbox/ui.adsabs.harvard.edu/abs/2017A%26A...602A.107B/: exportcitation
search/: search_index.json
src/exoscraper/: __init__.py  distribution.py  planet.py  population.py  query.py  star.py  system.py  target.py  utils.py
tests/: test_exoscraper.py  test_planet.py  test_query.py  test_star.py
